--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@navigationjs/react-native": "^0.32.7",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
     "@react-navigation/stack": "^6.3.9",
+    "axios": "^1.3.3",
     "expo": "^47.0.8",
+    "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
     "express": "^4.18.2",
+    "firebase": "^9.17.1",
+    "firebase-admin": "^11.5.0",
     "material-icons": "^1.13.1",
     "react": "18.1.0",
     "react-color": "^2.19.3",
@@ -27,7 +32,8 @@
     "react-native-multiple-choice": "^0.0.8",
     "react-native-multiple-choice-picker": "^1.0.6",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
