--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"name":"AwesomeProject","version":"0.0.1","private":true,"scripts":{"start":"node node_modules/react-native/local-cli/cli.js start"},"dependencies":{"mysql":"^2.18.1"}}
+{"name":"AwesomeProject","version":"0.0.1","private":true,"scripts":{"start":"node node_modules/react-native/local-cli/cli.js start"},"dependencies":{"@react-native-async-storage/async-storage":"^1.17.11","axios":"^1.3.3","mysql":"^2.18.1"}}
